# sane2airscan

./: .gitignore  CMakeLists.txt  README.md  task-scanner-driver.md
.github/workflows/: build-nix-artifact.yml
docs/: nixos-server-usage.md  xerox-airscan-bridge.md
include/xerox_airscan_bridge/: avahi_publisher.hpp  config.hpp  escl_server.hpp  http_server.hpp  jpeg_encoder.hpp  log.hpp  sane_device.hpp  scanner.hpp
modules/: xerox-airscan-bridge.nix
src/: avahi_publisher.cpp  config.cpp  escl_server.cpp  http_server.cpp  jpeg_encoder.cpp  main.cpp  sane_device.cpp
